@@ -4,6 +4,8 @@
 - added: SchemaBuilderEntity `schema.addHook(name, fn(error, model, options, callback))`
 - added: SchemaBuilderEntity `schema.hook(name, model, [helper], callback)`
 - added: `controller.$hook(name, [helper], callback)`
+- added: `String.parseInt2()` the method searchs number and converts it to integer
+- added: `String.parseFloat2()` the method searchs number and converts it to float
 
 - fixed: `controller.memorize()` threw a timeout when the action contains some error in the memorize scope
 - fixed: `TRY()`
